--- a/server/newknews/src/main/resources/templates/index.html
+++ b/server/newknews/src/main/resources/templates/index.html
@@ -2,9 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>SHP_T5</title>
 </head>
 <body>
+    <header>
+        <div id="title">
+            A
+        </div>
+    </header>
+
+    <div id="content">
+        <div class="A">
+            <h1> A </h1>
+            <h2> B </h2>
+            <h3> C </h3>
+        </div>
+    </div>
 
 </body>
 </html>
